<resources>
    <string name="app_name">Health Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to Calorie and Med Activity -->
    <string name="calorie_counter_title">Calorie Counter</string>
    <string name="calorie_counter_description">This will Manage your Daily Calorie Intake and help you be in shape.</string>
    <string name="med_rem_title">Pill Reminder</string>
    <string name="med_rem_descrip">This will help in Managing the Medicine taking Schedule and reminding when to buy medicine.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="toolbar_label">Health Manager</string>
    <string name="title_activity_main_calorie">MainCalorie</string>
    <string name="total_calorie_allowed">Total Calorie Allowed Today</string>
    <string name="calorie_took">Calorie Consumed</string>
    <string name="calorie_remaining">Calorie Free</string>
    <string name="na">Will be displayed</string>
    <string name="add_food">Going to </string>
    <string name="add_button">ADD Total Calorie</string>
    <string name="adjust_button">Adjust Total Calorie</string>
    <string name="suggestions">Suggestions</string>
    <string name="note_view">Note:</string>
    <string name="under_note">Will be updated soon enough.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_addfood_activity">addfood_activity</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="enter">Enter</string>
    <string name="food_name">Item Name</string>
    <string name="Type">Type</string>
    <string name="Calorie">Calorie</string>
    <string name="add">ADD</string>
    <string name="suggestions_to_eat">Suggestions To Eat Today:</string>
</resources>
