<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="com.example.android.healthmanager.MainCalorie">





    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/total_calorie"
        />
    <TextView
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/na"/>
    <TextView
        android:paddingTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calorie_took"/>
    <TextView
        android:gravity="center"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/na"
        android:textSize="20sp"/>
    <TextView
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingTop="8dp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calorie_remaining"/>
    <TextView
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/na"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:onClick="open_add_totalcalorie"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:onClick="open_add_totalcalorie"
        android:text="@string/adjust_button"
        />
    <Button
        android:layout_gravity="center"
android:onClick="open_suggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_view"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/under_note"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:onClick=""
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add" />
</LinearLayout>