<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:background="#263238"
    tools:context="com.example.android.healthmanager.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="open_calorie_counter"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/healthylife"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:fontFamily="sans-serif"
                android:textColor="#FFFFFF"
                android:text="@string/calorie_counter_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:text="@string/calorie_counter_description"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="open_calorie_counter"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/healthylife"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:fontFamily="sans-serif"
                android:textColor="#FFFFFF"
                android:text="@string/calorie_counter_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:text="@string/calorie_counter_description"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/medicine"
            android:scaleType="centerCrop"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:fontFamily="sans-serif"
                android:textColor="#FFFFFF"
                android:text="@string/med_rem_title" />

            <TextView
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/med_rem_descrip"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>